--- a/index.Rmd
+++ b/index.Rmd
@@ -261,12 +261,126 @@ knitr::include_graphics("razones-trigonometricas.jpg")
 ---
 # Versiones curiosas del Teorema de Pitágoras
 
-Poner el ejercicio del Purcell: empezar con 
+* <span style="font-size:20px"> ¿Y si en lugar de cuadrados ponemos otrs figuras?, ¿se mantiene alguna relación entre las áreas? 
+
+* <span style="font-size:20px"> Para que el problema sea sencillo, consideremos solo figuras **regulares**.
+
+.pull-left[
+
+```{r out.width = '100%', echo=FALSE, fig.align='center'}
+knitr::include_graphics("areas_triangulo.png")
+```
+]
+
+.pull-right[
+<span style="font-size:20px"> Tenemos que el área de un triángulo equilátero de lado $\color{darkred}{l}$ es
+
+<span style="font-size:20px"> $$
+\text{Área(triángulo)} = \color{darkrblue}{\frac{\sqrt{3}}{4}}\color{darkred}{l}^2
+$$
+<span style="font-size:20px"> Entonces, si los **catetos** miden $\color{red}{a}$ y $\color{blue}{b}$ y la hipotenusa mide $\color{darkgreen}{c}$ tenemos que
+
+<span style="font-size:20px"> $$
+\begin{aligned}
+\frac{\sqrt{3}}{4} \color{red}{a}^2 + \frac{\sqrt{3}}{4} \color{blue}{b}^2 & = \frac{\sqrt{3}}{4} \left( \color{red}{a}^2 + \color{blue}{b}^2 \right) \\
+& = \frac{\sqrt{3}}{4} \color{darkgreen}{c}^2
+\end{aligned}
+$$
+]
+
 
 ---
-# Paralelas
+# ¿Y sí ponemos un círculo?
 
-Dejar esto al final para usarlo de inmediato: explicar el quinto postulado
+.pull-left[
+
+```{r out.width = '110%', echo=FALSE, fig.align='center'}
+knitr::include_graphics("areas_circulo.png")
+```
+]
+
+.pull-right[
+
+</br>
+</br>
+
+<span style="font-size:20px"> El área de medío círculo de radio $\color{darkblue}{r}$ es 
+
+<span style="font-size:20px"> $$
+\text{Área(semicírculo)} = \pi\color{darkblue}{r}^2
+$$
+<span style="font-size:20px"> Entonces, si los **catetos** miden $\color{red}{a}$ y $\color{blue}{b}$ y la hipotenusa mide $\color{darkgreen}{c}$ tenemos que
+
+<span style="font-size:20px"> $$
+\begin{aligned}
+\pi \color{red}{a}^2 + \pi \color{blue}{b}^2 & = \pi \left( \color{red}{a}^2 + \color{blue}{b}^2 \right) \\
+& = \pi \color{darkgreen}{c}^2
+\end{aligned}
+$$
+
+]
+---
+# ¿Puede ser un $n$-ágono?
+
+.pull-left[
+
+```{r out.width = '110%', echo=FALSE, fig.align='center'}
+knitr::include_graphics("n-agon.jpg")
+```
+]
+
+.pull-right[
+<span style="font-size:20px"> Sabemos que el área de un polígono regular de $n$ lados es
+
+<span style="font-size:20px"> $$
+\text{Área(polígono)} = \frac{P\cdot R}{2}
+$$
+donde $R$ es el apotema y $P=n\cdot a$ el perímetro cuando cada lado mide $\color{red}{a}$.
+
+
+<span style="font-size:20px">  ¿Hay alguna fórmula del área de un $n$-ágono regular que dependa del lado?
+
+
+</br>
+<span style="font-size:20px"> $$
+\text{Área(polígono)} = \color{darkred}{\frac{n}{4\tan\left(\frac{\pi}{n}\right)}} \color{red}{a}^2 
+$$
+]
+
+---
+# ¿Y si no es regular? (1/2)
+
+```{r out.width = '60%', echo=FALSE, fig.align='center'}
+knitr::include_graphics("areas_funciones2.png")
+```
+
+
+<span style="font-size:20px">  En este caso, consideramos <span style="color:darkred"> áreas de regiones semejantes </span> construidas sobre los catetos y la hipotenusa de un triángulo rectángulo.
+
+---
+# ¿Y si no es regular? (2/2)
+
+.pull-left[
+```{r out.width = '100%', echo=FALSE, fig.align='center'}
+knitr::include_graphics("areas_funciones3.png")
+```
+]
+
+.pull-right[
+<span style="font-size:20px"> La semejanza de áreas significa considerar funciones
+
+<span style="font-size:20px"> $$
+\color{red}{g(x)} = \frac{a}{c}\color{darkgreen}{f}\left(\frac{c}{a}x\right) \,\,\,\text{ y }\,\,\, \color{blue}{h(x)} = \frac{b}{c}\color{darkgreen}{f}\left(\frac{c}{b}x\right)
+$$
+<span style="font-size:20px"> ¿Cómo se calcula el área bajo gráficas de funciones? <span style="color:darkred"> Con integrales. </span>
+
+
+<span style="font-size:20px"> Tenemos que
+
+<span style="font-size:20px"> $$
+\int_{0}^{a} \color{red}{g}(x) dx + \int_{0}^{b} \color{blue}{h}(x) dx = \int_{0}^{c} \color{darkgreen}{f}(x) dx
+$$
+]
 
 ---
 class: inverse, center
@@ -280,6 +394,13 @@ class: inverse, center
 <span style="font-size:35px;color:white"> ¿Y la forma del Universo?
 
 ---
+# Paralelas
+
+Dejar esto al final para usarlo de inmediato: explicar el quinto postulado
+
+---
+
+
 # Empecemos más cerca: este salón
 
 Sugerir que el mundo es plano
